2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* tests/testsuite.at (Unrecognized EXTERNPROTO): Ignore stdout,
	stderr.
	(Unimplemented EXTERNPROTO): Ignore stdout, stderr.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::create_vrml_from_stream(std::istream &)):
	Provide a real URI associated with the vrmlstream.  This is needed
	so that PROTOs in the stream can have valid node_class_ids.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am: touch files generated by antlr;
	antlr doesn't update the timestamps correctly.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am (EXTRA_DIST): Added
	openvrml-config.h.in; removed mistakenly listed
	openvrml-gl-config.h.in and openvrml-gl-common.h.

2005-12-31 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(shape_node::shape_node(const node_type &, const
	boost::shared_ptr<openvrml::scope> &)): Reordered member
	initializer list to match declaration order.

2005-12-30 Braden McDaniel  <braden@endoframe.com>

	Broke up URI grammar and used the part that parses absolute URIs
	to validate node_class_id.

	* src/libopenvrml/openvrml/browser.cpp
	(uri_reserved_parser): Spirit parser for reserved URI characters.
	(uri_reserved_p): uri_reserved_parser instance.
	(uri_unreserved_parser): Spirit parser for unreserved URI
	characters.
	(uri_unreserved_p): uri_unreserved_parser instance.
	(uric_grammar): Spirit grammar for URI characters.
	(uric_grammar::definition<ScannerT>::definition(const
	uric_grammar&)): uric_grammar definition.
	(uric_grammar::definition<ScannerT>::start() const): uric_grammar
	start rule.
	(uri_authority_grammar): Spirit grammar for the authority part of
	a URI.
	(uri_authority_grammar<Actions>::definition<ScannerT>::definition(const
	uri_authority_grammar &)): uri_authority_grammar definition.